added ds5 catalog html

--- a/index.html
+++ b/index.html
@@ -1272,6 +1272,7 @@
 				  <button class="nav-link" id="nav-ds2-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds2" type="button" role="tab" aria-controls="nav-ds2" aria-selected="false">DS2</button>
 				  <button class="nav-link" id="nav-ds3-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds3" type="button" role="tab" aria-controls="nav-ds3" aria-selected="false">DS3</button>
 				  <button class="nav-link" id="nav-ds4-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds4" type="button" role="tab" aria-controls="nav-ds4" aria-selected="false">DS4</button>
+				  <button class="nav-link" id="nav-ds5-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds5" type="button" role="tab" aria-controls="nav-ds5" aria-selected="false">DS5</button>
 			</div>
 			  
 			<div class="tab-content" id="nav-tabContent">
@@ -1298,15 +1299,16 @@
 							</tr>
 							<tr  class="table-danger">
 								<td><strong>Modified</strong></td>
-								<td>21/01/2025</td>
+								<td>30/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Datasets</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.csv" target="_blank">DS1</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.csv" target="_blank">DS2</a>,
-									<a href="" target="_blank">DS3</a>,
-									<a href="" target="_blank">DS4</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/tree/main/data/DS1" target="_blank">DS1</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/tree/main/data/DS2" target="_blank">DS2</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/tree/main/data/DS3" target="_blank">DS3</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/tree/main/data/DS4" target="_blank">DS4</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/tree/main/data/DS5" target="_blank">DS5</a>
 								</td>
 							</tr>
 							<tr class="table-danger">
@@ -1533,7 +1535,7 @@
 							</tr>
 							<tr>
 								<td><strong>Description</strong></td>
-								<td>This dataset contains data about the state of marriage and parenting regolamentation for same sex couples in European Union countries in the year 2024</td>
+								<td>This dataset contains data about the state of marriage and parenting regolamentation for same sex couples in Europe in the year 2024</td>
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Creator</strong></td>
@@ -1623,7 +1625,7 @@
 							</tr>
 							<tr>
 								<td><strong>Description</strong></td>
-								<td>This dataset contains data about the state of marriage and parenting regolamentation for samesex couples in European Union countries from the year 1989 until the year 2016</td>
+								<td>This dataset contains data about the state of marriage and parenting regolamentation for same sex couples in Europe from the year 1989 until the year 2016</td>
 							</tr>
 							<tr class="table-purple">
 								<td><strong>Creator</strong></td>
@@ -1697,6 +1699,95 @@
 								<td><strong>RDF assertion</strong></td>
 								<td>
 									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS4.ttl" target="_blank">Download DS4.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds5" role="tabpanel" aria-labelledby="nav-ds5-tab-metadata">
+					<h3>DS5 - Hate crimes against LGBTQ+ comunity 2016-2023</h3>
+					
+					<table class="table metadata-table" id="ds5-table">
+						<tbody>
+							<tr class="table-pink">
+								<td><strong>Title</strong></td>
+								<td>Hate crimes against LGBTQ+ comunity 2016-2023</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about reported hate crimes against the LGBTQ+ comunity from the year 2016 until the year 2023</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Creator</strong></td>
+								<td>Valentina Bertelli</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>30/01/2025</td>
+							</tr>
+							<tr  class="table-pink">
+								<td><strong>Modified</strong></td>
+								<td>30/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://hatecrime.osce.org/anti-lgbti-hate-crime" target="_blank">OSCE ODIHR Hate Crime Report</a>
+								</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Spatial</strong></td>
+								<td>Europe</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Temporal coverage</strong></td>
+								<td>2016 - 2023</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/4728>" target="_blank">Violence</a>,
+									<a href="http://eurovoc.europa.eu/3348" target="_blank">Crime</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, violence against LGBTQ+</td>
+							</tr>
+							<tr class="table-pink">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS5/hate_crimes.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS5/hate_crimes.json" target="_blank">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS5.ttl" target="_blank">Download DS5.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
