--- a/index.html
+++ b/index.html
@@ -1883,8 +1883,64 @@
 				<option value="friendsIntersex">Do you have friends or acquaintances who are intersex?</option>
 			  </select>
 			</div>
-		
 		</div>
+		<div id="linChartText" class="content">	
+			<h2>ASDFGHJKL</h2>
+			<h3>2016 - 2023</h3>
+			<p>asdfghjklqwertyuiopzxcvbnm
+			</p>
+		</diV>
+		<div  id="linechart" class="content">
+			<div class="chart-div" id="line">
+				<div class="bar-div" >
+					<canvas id="hate-crime-line-chart"></canvas>
+				</div>
+				
+				<div class="control-row" style="margin-bottom: 500px;">
+					<select class="countrydata2" id="country-hate-crime-select">
+					  <option value="Albania">Albania</option>
+					  <option value="Armenia">Armenia</option>
+					  <option value="Austria">Austria</option>
+					  <option value="Belarus">Belarus</option>
+					  <option value="Belgium">Belgium</option>
+					  <option value="BosniaandHerzegovina">Bosnia and Herzegovina</option>
+					  <option value="Bulgaria">Bulgaria</option>
+					  <option value="Croatia">Croatia</option>
+					  <option value="Cyprus">Cyprus</option>
+					  <option value="CzechRepublic">Czech Republic</option>
+					  <option value="Estonia">Estonia</option>
+					  <option value="Finland">Finland</option>
+					  <option value="France">France</option>
+					  <option value="Germany">Germany</option>
+					  <option value="Greece">Greece</option>
+					  <option value="Hungary">Hungary</option>
+					  <option value="Iceland">Iceland</option>
+					  <option value="Ireland">Ireland</option>
+					  <option value="Italy">Italy</option>
+					  <option value="Latvia">Latvia</option>
+					  <option value="Liechtenstein">Liechtenstein</option>
+					  <option value="Lithuania">Lithuania</option>
+					  <option value="Malta">Malta</option>
+					  <option value="Moldova">Moldova</option>
+					  <option value="Montenegro">Montenegro</option>
+					  <option value="Netherlands">Netherlands</option>
+					  <option value="NorthMacedonia">North Macedonia</option>
+					  <option value="Norway">Norway</option>
+					  <option value="Poland">Poland</option>
+					  <option value="Portugal">Portugal</option>
+					  <option value="Romania">Romania</option>
+					  <option value="Serbia">Serbia</option>
+					  <option value="Slovakia">Slovakia</option>
+					  <option value="Slovenia">Slovenia</option>
+					  <option value="Spain">Spain</option>
+					  <option value="Sweden">Sweden</option>
+					  <option value="Switzerland">Switzerland</option>
+					  <option value="Turkey">Turkey</option>
+					  <option value="Ukraine">Ukraine</option>
+					  <option value="UnitedKingdom">United Kingdom</option>
+					</select>
+				  </div>
+			</div>
 	</div>
 	<div id="mapText" class="content">	
 		<h2>Marriage and Adoption</h2>
