--- a/index.html
+++ b/index.html
@@ -1825,13 +1825,14 @@
 	<diV id="textVisualisation" class="content" >
 		<div id="visualisationIntro">
 			<h2>Visualisation</h2>
-			<p>Various graphic representations have been employed to analyze and illustrate key aspects related to the experiences of the LGBTI community in Europe. These visualizations focus on multiple dimensions, including:</p>
+			<p>Various graphic representations have been employed to analyze and illustrate key aspects related to the experiences of the LGBTQ+ community in Europe. These visualizations focus on multiple dimensions, including:</p>
 			<ul>
 				<li><strong>Levels of Discrimination</strong> perceived by members of the community in different areas of life</li>
 				<li><strong>Attitudes of the general public</strong> towards LGBTI+ individuals</li>
 				<li><strong>Legal status and rights</strong> associated with gay marriage, cohabitation, adoption, and other issues</li>
+				<li><strong>Episodes of hate crime</strong> towards the comunity, reported to the authorities</li>
 			</ul>
-			<p>Bar charts created using <a href="https://www.chartjs.org/docs/latest/">Charts.js</a> have been used to present the data on discrimination, while a map shows how the legal status of gay people has changed during the years.</p>
+			<p>Bar charts created using <a href="https://www.chartjs.org/docs/latest/">Charts.js</a> have been used to present the data on discrimination, while a map shows how the legal status of gay people has changed during the years. The rate of hate crimes is shown through a line chart for each country, and a comparison of these rates across countries is displayed on another map. </p>
 		</div>
 	</diV>
 	<div id="barchartsText" class="content">	
@@ -2076,8 +2077,9 @@
 		<h2>Violent incidents, threats and hate speech</h2>
 		<h3>2016 - 2023</h3>
 		<p>
-			<em>The Organization for Security and Co-operation in Europe (OSCE)</em> offers information on 57 States from Europe, Central Asia and North America. </p>
-
+			<em>The Organization for Security and Co-operation in Europe (OSCE)</em> offers information on 57 States from Europe, Central Asia and North America. We focused on hate crimes reported in european countries in the years from 2016 to 2023.</p>
+		<p>The linechart below shows how the number of incidents increases or dicreases through the years in individual countries, while a map is provided as a comparison tool.</p>	
+        <p>These representations are based on the data reported by OSCE: instances of zero cases of hate crimes reported is due countries not reporting data to OSCE Office for Democratic Institutions and Human Rights (ODIHR).</p>
 		
 		<div class="nav nav-tabs" id="nav-tab" role="tablist">
 			  <button class="nav-link active" id="nav-first-tab" data-bs-toggle="tab" data-bs-target="#nav-first" type="button" role="tab" aria-controls="nav-first" aria-selected="true">Incidents per country</button>
