DS6 metadata table

--- a/index.html
+++ b/index.html
@@ -1319,6 +1319,7 @@
 				  <button class="nav-link" id="nav-ds3-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds3" type="button" role="tab" aria-controls="nav-ds3" aria-selected="false">DS3</button>
 				  <button class="nav-link" id="nav-ds4-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds4" type="button" role="tab" aria-controls="nav-ds4" aria-selected="false">DS4</button>
 				  <button class="nav-link" id="nav-ds5-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds5" type="button" role="tab" aria-controls="nav-ds5" aria-selected="false">DS5</button>
+				  <button class="nav-link" id="nav-ds6-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds6" type="button" role="tab" aria-controls="nav-ds6" aria-selected="false">DS6</button>
 			</div>
 			  
 			<div class="tab-content" id="nav-tabContent">
@@ -1834,6 +1835,94 @@
 								<td><strong>RDF assertion</strong></td>
 								<td>
 									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS5.ttl" target="_blank">Download DS5.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds6" role="tabpanel" aria-labelledby="nav-ds6-tab-metadata">
+					<h3>DS6 - Laws against hate crimes directed towards the LGBTQ+ comunity</h3>
+					<table class="table metadata-table" id="ds6-table">
+						<tbody>
+							<tr class="table-cerulean">
+								<td><strong>Title</strong></td>
+								<td>Laws against hate crimes</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about european laws against hate crimes directed towards the LGBTQ+ comunity</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Creator</strong></td>
+								<td>Giorgia Umana</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>o7/02/2025</td>
+							</tr>
+							<tr  class="table-cerulean">
+								<td><strong>Modified</strong></td>
+								<td>07/02/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://rainbowmap.ilga-europe.org/categories/hate-crime-hate-speech/" target="_blank">Rainbow Map</a>
+								</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Spatial</strong></td>
+								<td>Europe</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Temporal coverage</strong></td>
+								<td>1905 - 2024</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/4728>" target="_blank">Violence</a>,
+									<a href="http://eurovoc.europa.eu/3348" target="_blank">Crime</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, violence against LGBTQ+</td>
+							</tr>
+							<tr class="table-cerulean">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS6/laws_against_lgbtq_hate_crimes.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS6/laws_against_lgbtq_hate_crimes.json" target="_blank">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS6.ttl"  target="_blank">Download DS6.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
