Update to visualization and sustainability

--- a/index.html
+++ b/index.html
@@ -2395,7 +2395,12 @@
 
 <div class="content" id="Conclusions">
 	<h2>Conclusions</h2>
-	<p>Our analysis highlights that <strong>discrimination against LGBTQ+ people remains prevalent in Europe today</strong>. From the visualization of data on <strong>marriage and parenting regulations</strong>, a <strong>clear divide between Western and Eastern Europe</strong> emerges, as depicted in our map. Further steps toward inclusivity must be taken by governments to ensure that rainbow families are guaranteed the same rights and opportunities as traditional ones. The <strong> discrimination analysis</strong> reveals that the percentage of people experiencing discrimination in Eastern Europe is slightly higher than in Western countries, but the <strong>disparity is not substantial</strong>, meaning that <strong>discrimination is still a widespread issue</strong>. Public opinion data seems to confirm this divide: Eastern European countries tend to have a more negative view of the LGBTQ+ community. A higher percentage of people in these countries expressed discomfort with having a child in a same-sex relationship and supporting same-sex marriage. It is important to note that when asked about the prevalence of discrimination against LGBTQ+ people in their country, the most common response was that it is fairly widespread, confirming that discrimination persists across Europe. Nevertheless, the overall amount of <strong>answers in support of the LGBTQ+ community</strong> should not be ignored, as they <strong>offer hope for a more inclusive future</strong> and represent encouraging signs of progress.</p>
+	<p>Our analysis highlights that <strong>discrimination against LGBTQ+ people remains prevalent in Europe today</strong>. From the visualization of data on <strong>marriage and parenting regulations</strong>, a <strong>clear divide between Western and Eastern Europe</strong> emerges, as depicted in our map. Further steps toward inclusivity must be taken by governments to ensure that rainbow families are guaranteed the same rights and opportunities as traditional ones. </p>
+		
+	<p>The <strong> discrimination analysis</strong> reveals that the percentage of people experiencing discrimination in Eastern Europe is slightly higher than in Western countries, but the <strong>disparity is not substantial</strong>, meaning that <strong>discrimination is still a widespread issue</strong>.</p>
+	<p> Public opinion data seems to confirm this divide: Eastern European countries tend to have a more negative view of the LGBTQ+ community. A higher percentage of people in these countries expressed discomfort with having a child in a same-sex relationship and supporting same-sex marriage. </p>
+			
+	<p>It is important to note that when asked about the prevalence of discrimination against LGBTQ+ people in their country, the most common response was that it is fairly widespread, confirming that discrimination persists across Europe. Nevertheless, the overall amount of <strong>answers in support of the LGBTQ+ community</strong> should not be ignored, as they <strong>offer hope for a more inclusive future</strong> and represent encouraging signs of progress.</p>
 </div>
 
 	
@@ -2445,6 +2450,15 @@
 			The dataset could be more sustainable if it was conducted more frequently, as previous surveys were conducted in 2012 and 2019. This would allow for greater insights into the rapidly changing social and political realities of LGBTQ+ individuals and communities.
 		  </p>
 		</div>
+		<div class="dataset-block">
+			<h3>Hate Crime Report</h3>
+			<p>
+			  The Hate Crime Report is available to access online and updated annually. It includes a wide range of information covering numerous countries in Europe and beyond.
+			</p>
+			<p>OSCE updates its information on hate crimes, notable incidents, and policy responses every year on <em>International Tolerance Day</em> (16 November). The data is collected from participating States, civil society organisations and inter-governmental organisations.
+			</p>
+			
+		  </div>
 	  
 		<div class="project-note">
 		  <h3>The Project</h3>
@@ -2474,29 +2488,25 @@
 				<div class="card">
 					<p><strong>Giorgia Umana</strong></p>
 					<p>Database Analysed: Discrimination in the European Union</p>
-					<p>Giorgia made significant contributions to dataset research, website visualizations, and the analysis of whether there is a divide in discrimination between Eastern and Western Europe. Her meticulous attention to detail and analytical approach have been instrumental in uncovering critical patterns and insights throughout the project.</p>
+					<p>Visualisations: Marriage and Adoption, Violent incidents, threats and hate speech</p>
 				</div>
 				<div class="card">
 					<p><strong>Valentina Bertelli</strong></p>
 					<p>Database Analysed: EU LGBTIQ Survey III</p>
-					<p>Valentina made substantial contributions to the website's design and functionality,
-						ensuring its smooth operation. She also identified and analyzed the EU LGBTIQ Survey III dataset,
-						skillfully integrating and mashing it up with other datasets to enhance the project's depth and comprehensiveness.</p>
+					<p>Visualisations: Discrimination and public opinion, Violent incidents, threats and hate speech</p>
 				</div>
 				<div class="card">
 					<p><strong>Alisha Carol Hiscox</strong></p>
-					<p>Database Analysed: Rainbow Europe</p>
-					<p>Alisha played a key role in identifying databases that would support our project's research questions.
-						She thoroughly analyzed the Rainbow Europe dataset,
-						which provided critical insights into the stark discrimination divide between Eastern and Western European Union countries.</p>
+					<p>Database Analysed: Rainbow Europe, Hate Crime Report</p>
+					
 				</div>
 				<div class="card">
 					<p><strong>Lukas Firantas</strong></p>
 					<p>Database Analysed: LawsAndFamilies</p>
-					<p>Lukas contributed by identifying several useful datasets that highlighted the clear divide between Eastern and Western European Union countries.
-						Additionally, he provided support in the development and functionality of the website as well as helped set out project topic.</p>
+				
 				</div>
 			</div>
+			<br>
 		<p> Together, we are united by a shared mission: to use the power of open data and ethical research to shed light on the
 			inequalities faced by marginalized communities and  potentially contribute to building a more equitable digital and social landscape.</p>
 	</div>
