updated technical analysis

--- a/index.html
+++ b/index.html
@@ -1264,6 +1264,7 @@
 									<td><strong>EU LGBTIQ Survey III</strong></td>
 									<td><strong>Rainbow Europe</strong></td>
 									<td><strong>Laws And Families</strong></td>
+									<td><strong>Hate Crime Report</strong></td>
 								</tr>
 								<tr>
 									<th>Format</th>
@@ -1271,20 +1272,23 @@
 									<td>HTML, CSV, RDF, XSLT</td>
 									<td>PDF, XLS, PNG, PPT</td>
 									<td>PDF, XLS</td>
+									<td>XSLS</td>
 								</tr>
 								<tr class="table-primary">
 									<th>Metadata</th>
 									<td>Metadata is provided (RDF/XML, Turtle Notation3, N-Triples, JSON-LD). It provides titles and descriptions of the files, a unique identifier which points to the file download link, the reuse license (dct:license), the file format, whe the dataset was first issued and when it was modified (if necessary) and th languages.</td>
 									<td>Metadata are not present</td>
-									<td></td>
-									<td></td>
+									<td>Metadata are not present</td>
+									<td>Metadata are not present</td>
+									<td>Metadata are present</td>
 								</tr>
 								<tr>
 									<th>URI</th>
-									<td><a href="https://europa.eu/eurobarometer/surveys/detail/2972"></a>https://europa.eu/eurobarometer/surveys/detail/2972</td>
-									<td><a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii"></a>https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii</td>
-									<td><a href="https://rainbowmap.ilga-europe.org/categories/family/"></a>https://rainbowmap.ilga-europe.org/categories/family/</td>
-									<td><a href="https://lawsandfamilies-database.site.ined.fr/en/legal-project/interactive-database//#tab-question"></a>https://lawsandfamilies-database.site.ined.fr/en/legal-project/interactive-database//#tab-question</td>
+									<td><a href="https://europa.eu/eurobarometer/surveys/detail/2972">Eurobarometer</a></td>
+									<td><a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii">EU LGBTIQ Survey III</a></td>
+									<td><a href="https://rainbowmap.ilga-europe.org/categories/family/">Rainbow Map</a></td>
+									<td><a href="https://lawsandfamilies-database.site.ined.fr/en/legal-project/interactive-database//#tab-question">The LawsAndFamilies Database</a></td>
+									<td><a href="https://hatecrime.osce.org/anti-lgbti-hate-crime?fbclid=IwY2xjawITB09leHRuA2FlbQIxMAABHTsCmOQ_4FzZuLby6R-avTKiMCEnX0jU8bLdEhCNQ8SeMIVZelzkiFOULQ_aem_RrRvC9jfWvUnCm0Z8U5Scg">Hate Crime Report</a></td>
 								</tr>
 								<tr class="table-primary">
 									<th>Provenance</th>
@@ -1292,6 +1296,7 @@
 									<td>European Union Agency for Fundamental Rights</td>
 									<td>Statista</td>
 									<td>LawsAndFamilies</td>
+									<td>OSCE ODIHR Hate Crime Report</td>
 								</tr>
 							  </table>
 							</div>
