updated quality analysis

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 									<td><strong>EU LGBTIQ Survey III</strong></td>
 									<td><strong>Rainbow Europe</strong></td>
 									<td><strong>Laws And Families</strong></td>
+									<td><strong>Hate Crime Report</strong></td>
 								</tr>
 								<tr>
 									<th>Completeness of the scheme</th>
@@ -252,6 +253,7 @@
 									<td>The database is generally complete. In cases where questions are addressed to specific social groups, there are instances of missing values for certain countries due to the sample size being under 20 unweighted observations.</td>
 									<td>The dataset includes scores for all European countries, no values are missing</td>
 									<td>The database only provides 20 EU countries and UK. For these countries it's generally complete however the data stopped beying logged from 2016 untill now</td>
+									<td>ODIHR presents consistent and reliable information from participating States, civil society organisations and inter-governmental organisations on hate crimes, notable incidents and policy responses. </td>
 								</tr>
 								<tr class="table-danger">
 									<th>Completeness of records</th>
@@ -259,6 +261,7 @@
 									<td>One of the elements associated with each record is notes about values: if values are present, there are usually no notes; if values are missing, the notes provide explanations for the lack of data.</td>
 									<td>No values are missing</td>
 									<td>In certain table cells the data is missing, probablly indicating that there was nothing to log that year. It is indicated by "?"</td>
+									<td>Records may vary in detail</td>
 								</tr>
 								<tr>
 									<th>Percentage of null values
@@ -267,6 +270,7 @@
 									<td>The survey is well-representative of the LGBTQ+ community, taking into account a wide range of sexualities and gender identities. Some countries lack data on certain categories of members due to small sample sizes.</td>
 									<td>The survey is well-representative of the LGBTQ+ community, taking into account a good range of sexualities and gender identities (Lesbian, Gay, Bisexual, Transgender, Intersex people)</td>
 									<td>The data contains countries that allow certain relationships between same sex and different sex people up untill 2016.</td>
+									<td>The dataset may not capture all hate crimes, as it relies on reports from various sources (e.g. law enforcement, NGOs)</td>
 								</tr>
 							  </table>
 							</div>
@@ -287,9 +291,11 @@
 									<td><strong>EU LGBTIQ Survey III</strong></td>
 									<td><strong>Rainbow Europe</strong></td>
 									<td><strong>Laws And Families</strong></td>
+									<td><strong>Hate Crime Report</strong></td>
 								</tr>
 								<tr>
 									<th>Are there any syntactic or semantic errors?</th>
+									<td class="x">&#10060;</td>
 									<td class="x">&#10060;</td>
 									<td class="x">&#10060;</td>
 									<td class="x">&#10060;</td>
@@ -314,9 +320,11 @@
 										<td><strong>EU LGBTIQ Survey III</strong></td>
 										<td><strong>Rainbow Europe</strong></td>
 										<td><strong>Laws And Families</strong></td>
+										<td><strong>Hate Crime Report</strong></td>
 									</tr>
 									<tr>
 										<th>Are there any contradictions?</th>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -341,6 +349,7 @@
 										<td><strong>EU LGBTIQ Survey III</strong></td>
 										<td><strong>Rainbow Europe</strong></td>
 										<td><strong>Laws And Families</strong></td>
+										<td><strong>Hate Crime Report</strong></td>
 									</tr>
 									<tr>
 										<th>When was the data last updated?</th>
@@ -348,6 +357,7 @@
 										<td>28th June 2024</td>
 										<td>May 2024</td>
 										<td>Between 1989 to 2016</td>
+										<td>16 November 2024</td>
 									</tr>
 									<tr class="table-danger">
 										<th>Known update frequency</th>
@@ -355,6 +365,7 @@
 										<td>Data was collected in 2023 and published in 2024. This is the third iteration of the EU LGBTIQ Survey of the European Union Agency for Fundamental Rights (FRA). Previous surveys were conducted in 2012 and 2019</td>
 										<td>The data reflects the legal and policy situation in 2024, ensuring up-to-date relevance</td>
 										<td>The data was compiled in early 2016 in Paris</td>
+										<td>The data is collected and updated annually; it's released every year on International Tolerance Day</td>
 									</tr>
 									<tr>
 										<th>Average update frequency</th>
@@ -362,6 +373,7 @@
 										<td>Average update frequency 5/6 years</td>
 										<td>Published annually during the week of May 17</td>
 										<td>Dataset was not beying updated. It was released once in early 2016</td>
+										<td>ODIHR updates its information on hate crimes, notable incidents, and policy responses annually. ODIHR collects this information from participating States, civil society organisations and inter-governmental organisations.</td>
 									</tr>
 								</table>
 							  </div>
