--- a/index.html
+++ b/index.html
@@ -851,6 +851,7 @@
 										<td><i class="fa fa-check"></i></td>
 										<td>ILGA-Europe updates the Rainbow Map dataset annually to reflect changes in legislation, policies, and societal attitudes. This aligns with their mission of providing up-to-date insights on LGBTQ rights in Europe</td>
 										<td class="x">&#10060;</td>
+										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you have some mechanism for informing the end-user that the dataset is updated at a given time to avoid mis-usage and so potential risk of damage?</th>
@@ -858,11 +859,13 @@
 										<td><i class="fa fa-check"></i></td>
 										<td>Updates to the Rainbow Map are publicly announced on ILGA-Europe’s website and through their social media channels. The publication clearly states the year of the dataset, ensuring users understand the data's time frame</td>
 										<td><i class="fa fa-check"></i></td>
+										<td>Updates are declared on the OSCE platform</td>
 									</tr>
 									<tr>
 										<th>Did you check if the dataset for some reason can’t be indexed by the research engines (e.g. Google, Yahoo, etc.)?
 										</th>
 										<td>The dataset is indexed by the research engines </td>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -873,6 +876,7 @@
 										<td><i class="fa fa-check"></i></td>
 										<td>The Rainbow Map dataset does not include personal data. It consists of aggregated and anonymized information regarding laws, policies, and societal conditions, ensuring compliance with GDPR</td>
 										<td>There is no personal data</td>
+										<td class="x">&#10060;</td>
 									</tr>
 								</table>
 							  </div>
