--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 									<td><strong>EU LGBTIQ Survey III</strong></td>
 									<td><strong>Rainbow Europe</strong></td>
 									<td><strong>Laws And Families</strong></td>
+									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
 								<tr>
 									<th>Completeness of the scheme</th>
@@ -289,6 +290,7 @@
 									<td><strong>EU LGBTIQ Survey III</strong></td>
 									<td><strong>Rainbow Europe</strong></td>
 									<td><strong>Laws And Families</strong></td>
+									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
 								<tr>
 									<th>Are there any syntactic or semantic errors?</th>
@@ -317,6 +319,7 @@
 										<td><strong>EU LGBTIQ Survey III</strong></td>
 										<td><strong>Rainbow Europe</strong></td>
 										<td><strong>Laws And Families</strong></td>
+										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
 									<tr>
 										<th>Are there any contradictions?</th>
@@ -345,6 +348,7 @@
 										<td><strong>EU LGBTIQ Survey III</strong></td>
 										<td><strong>Rainbow Europe</strong></td>
 										<td><strong>Laws And Families</strong></td>
+										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
 									<tr>
 										<th>When was the data last updated?</th>
@@ -352,6 +356,7 @@
 										<td>28th June 2024</td>
 										<td>May 2024</td>
 										<td>Between 1989 to 2016</td>
+										<td>16 November 2024 (the data is released every year on International Tolerance Day)</td>
 									</tr>
 									<tr class="table-danger">
 										<th>Known update frequency</th>
@@ -359,6 +364,7 @@
 										<td>Data was collected in 2023 and published in 2024. This is the third iteration of the EU LGBTIQ Survey of the European Union Agency for Fundamental Rights (FRA). Previous surveys were conducted in 2012 and 2019</td>
 										<td>The data reflects the legal and policy situation in 2024, ensuring up-to-date relevance</td>
 										<td>The data was compiled in early 2016 in Paris</td>
+										<td>The data is collected and updated annually</td>
 									</tr>
 									<tr>
 										<th>Average update frequency</th>
@@ -366,6 +372,7 @@
 										<td>Average update frequency 5/6 years</td>
 										<td>Published annually during the week of May 17</td>
 										<td>Dataset was not beying updated. It was released once in early 2016</td>
+										<td>ODIHR updates its information on hate crimes, notable incidents, and policy responses annually. ODIHR collects this information from participating States, civil society organisations and inter-governmental organisations.</td>
 									</tr>
 								</table>
 							  </div>
