small correction to analysis

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 										<td>It is part of a series of Eurobarometer surveys examining discrimination, with previous surveys conducted in 2006, 2009, 2012, 2015 and 2019</td>
 										<td>Data was collected in 2023 and published in 2024. This is the third iteration of the EU LGBTIQ Survey of the European Union Agency for Fundamental Rights (FRA). Previous surveys were conducted in 2012 and 2019</td>
 										<td>The data reflects the legal and policy situation in 2024, ensuring up-to-date relevance</td>
+										<td>The data was compiled in early 2016 in paris</td>
 										<td>The data is collected and updated  every year on International Tolerance Day</td>
 									</tr>
 									<tr>
